// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/util/pathToRegexp.test.ts should test match 1`] = `
{
  "index": 0,
  "params": {
    "id": "123",
  },
  "path": "/user/123",
}
`;

exports[`/test/util/pathToRegexp.test.ts should test match 2`] = `false`;

exports[`/test/util/pathToRegexp.test.ts should test match 3`] = `
{
  "index": 0,
  "params": {
    "id": "café",
  },
  "path": "/user/caf%C3%A9",
}
`;
